--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -37,7 +37,7 @@
     
     <div class="row">
       <div class="col-8" style="background-color: #f6f7f8;">
-        <h2>Trending Questions</h2>
+        <h2>Questions</h2>
        <table>
             <tr *ngFor="let data of forumData | paginate: {itemsPerPage: 4, currentPage:page}" style=" border-bottom: 1px solid grey;">
                 <br>
