--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -1,5 +1,6 @@
 <body fxLayout="column">
 <!--This page is main for Forum Page, having all questions and option to post a new question, any offline user can also see questions and answers-->
+<!--Author: Vidip Malhotra-->
 <div class="container" style="width:50%;">
     <br>
     <form #QuestionForm="ngForm" (ngSubmit)="onSubmit(QuestionForm)" autocomplete="off">
