--- a/src/app/components/questionitem/questionitem.component.html
+++ b/src/app/components/questionitem/questionitem.component.html
@@ -1,3 +1,4 @@
+<!--author: Vidip Malhotra-->
 <div class="container" style="margin-bottom:35%; font-family: Lato;">
     <br>
     <div class="row">
