--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -34,7 +34,7 @@
       <button type="submit" class="btn btn-success" style="width:200px; margin-left: 34%;"
         [disabled]="question === '' || category === ''">Post</button>
       <br>
-      <p style="text-align: center; color: red;">{{alert_message}}</p>
+      <p id="alert_message">{{alert_message}}</p>
     </form>
   </div>
   <br>
@@ -42,21 +42,21 @@
     <br>
 
     <div class="row">
-      <div class="col-8" style="background-color: #f6f7f8;">
+      <div class="col-8" id="mainques">
         <h2>Questions</h2>
         <table>
           <tr *ngFor="let data of forumData | paginate: {itemsPerPage: 4, currentPage:page}"
-            style=" border-bottom: 1px solid grey;">
+            id="tablerow">
             <br>
             <span routerLink="/question/{{data.questionId}}/{{data.category}}"
               style="color: blue; cursor: -webkit-grab; cursor: grab;">
               <h2>{{data.question}} ?</h2>
             </span>
-            <p><span style="color: grey;">Asked By:</span> {{data.askedby}}</p>
-            <p><span style="color: red;" *ngIf="data.answerval==0 else elblock">No Answers</span>
+            <p><span id="askedby">Asked By:</span> {{data.askedby}}</p>
+            <p><span id="noans" *ngIf="data.answerval==0 else elblock">No Answers</span>
               <ng-template #elblock>Answers posted</ng-template> &nbsp;&nbsp; <span
-                style="color: green;">{{data.votes}}</span> votes &nbsp;&nbsp; Category: <span
-                style="color: blue;">{{data.category}}</span>
+                id="greenplus">{{data.votes}}</span> votes &nbsp;&nbsp; Category: <span
+                id="blueplus">{{data.category}}</span>
             </p>
           </tr>
         </table>
