Notifications intergardted with frontend

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,12 @@
 <!-- @author Avinash Gazula <agazula@dal.ca>  -->
 <div>
     <mat-toolbar class="parent">
-
         <div fxLayout.lt-md="row">
             <button mat-icon-button [matMenuTriggerFor]="belowMenu" opened="false" fxHide.gt-sm="true">
                 <mat-icon>menu</mat-icon>
             </button>
             <mat-menu #belowMenu="matMenu" yPosition="below">
+
                 <div fxLayout="column">
                     <button href="#" mat-button [routerLink]="['/blogs']"><span class="menu-item">Blogs</span></button>
                     <button href="#" mat-button [routerLink]="['/view-doctor-appointments']"><span
@@ -23,6 +23,7 @@
                 </div>
 
             </mat-menu>
+
             <button mat-button routerLink="/" dis>
                 <mat-icon class="logo">local_hospital</mat-icon>
                 <span class="logo">HEALTHHUB</span>
@@ -55,42 +56,26 @@
 
             <div fxShow.gt-md="true" *ngIf="isLoggedIn">
                 <button class="notifications" mat-icon-button [matMenuTriggerFor]="notificationsMenu" opened="false">
-                    <mat-icon matBadge="3" matBadgeSize="small">notifications_none</mat-icon>
+                    <mat-icon matBadge={{count}} matBadgeSize="small">notifications_none</mat-icon>
                 </button>
                 <mat-menu #notificationsMenu="matMenu" yPosition="below">
                     <div fxLayout="column" class="notificationMenu">
-                        <mat-card class="notificationCard">
-                            <mat-card-content>
-                                <p>
-                                    Appointment with Dr. Rogers tomorrow.
-                                </p>
-                            </mat-card-content>
-                            <mat-card-actions fxLayout="row">
-                                <button mat-button>CONFIRM</button>
-                                <button mat-button>CANCEL</button>
-                            </mat-card-actions>
-                        </mat-card>
-                        <mat-card class="notificationCard">
-                            <mat-card-content>
-                                <p>
-                                    Medicines on their way. You can expect them to be delivered by 25th July
-                                </p>
-                            </mat-card-content>
-                        </mat-card>
-                        <mat-card class="notificationCard">
-                            <mat-card-content>
-                                <p>
-                                    Appointment with Dr. Rogers tomorrow.
-                                </p>
-                            </mat-card-content>
-                            <mat-card-actions fxLayout="row">
-                                <button mat-button>CONFIRM</button>
-                                <button mat-button>CANCEL</button>
-                            </mat-card-actions>
+                        <mat-card class="notificationCard" *ngFor="let notofication of notifications">
+                            <div class="row">
+                                <div class="col-10">
+                                    <mat-card-content>
+                                        {{notofication.message}}
+                                    </mat-card-content>
+                                </div>
+                                <div class="col-2">
+                                    <mat-card-actions fxLayout="row">
+                                        <mat-icon matBadgeSize="small" (click)="markAsRead(notofication._id)">cancel</mat-icon>
+                                    </mat-card-actions>
+                                </div>
+                            </div>
                         </mat-card>
                     </div>
                 </mat-menu>
-
                 <button mat-icon-button [matMenuTriggerFor]="profileMenu" opened="false">
                     <mat-icon>account_circle</mat-icon>
                 </button>
@@ -105,10 +90,6 @@
                 </mat-menu>
             </div>
         </div>
-
-
-
-
 
     </mat-toolbar>
 </div>
