Changes: - Added route protection - Added API for edit profile - Added close button to dialogs - Remove login checks in medicine-delivery and suggestdoctor components - Hidden certain components that should only be visible either doctors or consumers

--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,65 +1,44 @@
-<!-- /* @author Rudra Makwana <rd851601@dal.ca> */ -->
+<!-- @author Avinash Gazula <agazula@dal.ca> -->
 
-<body fxLayoutAlign="center" fxLayout="column">
-  <div class="parent">
-    <div class="editprofile container">
-      <mat-toolbar>
-        <mat-toolbar-row>
-          <span class="span">Edit your information</span>
-        </mat-toolbar-row>
-      </mat-toolbar>
-      <div>
-        <form [formGroup]="editProfileForm">
+<button mat-icon-button tabindex="-1" class="close-button" [routerLink]="['/']" [mat-dialog-close]="true">
+  <mat-icon class="close-icon">close</mat-icon>
+</button>
+<div class="parent">
+  <section class="container">
+    <div class="editprofile">
+      <h3>Edit your information</h3>
+      <form [formGroup]="editProfileForm">
 
-          <mat-form-field class="first" appearance="standard">
-            <mat-label>First Name</mat-label>
-            <input matInput type="text" formControlName="firstName" required>
-            <mat-error
-              *ngIf="editProfileForm.controls['firstName'].invalid && editProfileForm.controls['firstName'].touched">
-              First name is required
-            </mat-error>
-          </mat-form-field>
-          <br>
-          <mat-form-field appearance="standard">
-            <mat-label>Last Name</mat-label>
-            <input matInput type="text" formControlName="lastName" required>
-            <mat-error
-              *ngIf="editProfileForm.controls['lastName'].invalid && editProfileForm.controls['lastName'].touched">Last
-              name is required
-            </mat-error>
-          </mat-form-field>
-          <br>
-          <mat-form-field appearance="standard">
-            <mat-label>Email Address</mat-label>
-            <input matInput type="email" name="emailInput" formControlName="emailID" required>
-            <mat-error
-              *ngIf="editProfileForm.controls['emailID'].invalid && editProfileForm.controls['emailID'].touched"
-              class="alert alert-danger">{{getEmailIDError()}}
-            </mat-error>
-          </mat-form-field>
-          <br>
-          <mat-form-field appearance="standard">
-            <mat-label>Change password</mat-label>
-            <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" required>
-            <button mat-icon-button matSuffix (click)="hide = !hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-            <mat-hint align="end">Min Length 8. At least 1 Uppercase, Lowercase and Number</mat-hint>
-            <mat-error
-              *ngIf="editProfileForm.controls['password'].invalid && editProfileForm.controls['password'].touched">
-              {{getPasswordError()}}
-            </mat-error>
-          </mat-form-field>
-          <br>
-          <br>
-          <mat-card-actions>
-            <button (click)="edit()" mat-raised-button type="submit" color="primary">Edit Profile</button>
-            <span> </span>
-            <button (click)="cancel()" mat-raised-button type="reset" color="secondary">Cancel</button>
-          </mat-card-actions>
-        </form>
-      </div>
+        <mat-form-field class="first" appearance="standard">
+          <mat-label>Name</mat-label>
+          <input matInput type="text" formControlName="name">
+        </mat-form-field>
+        <br>
+        <mat-form-field appearance="standard">
+          <mat-label>Change Email Address</mat-label>
+          <input matInput type="email" formControlName="email">
+          <mat-error *ngIf="email.invalid && email.touched">
+            {{getEmailError()}}
+          </mat-error>
+        </mat-form-field>
+        <br>
+        <mat-form-field appearance="standard">
+          <mat-label>Change password</mat-label>
+          <input matInput formControlName="password" [type]="hide ? 'password' : 'text'">
+          <button mat-icon-button matSuffix (click)="hide = !hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+          <mat-hint align="end">Min Length 8. At least 1 Uppercase, Lowercase and Number</mat-hint>
+          <mat-error *ngIf="password.invalid && password.touched">
+            {{getPasswordError()}}
+          </mat-error>
+        </mat-form-field>
+        <br>
+        <br>
+        <mat-card-actions>
+          <button (click)="edit()" mat-raised-button type="submit" color="primary">Update Profile</button>
+        </mat-card-actions>
+      </form>
     </div>
-  </div>
-  <hr>
-</body>
+  </section>
+</div>
