--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,5 +1,8 @@
 <!-- /* @author Avinash Gazula <agazula@dal.ca> */ -->
 
+<button mat-icon-button tabindex="-1" class="close-button" [routerLink]="['/']" [mat-dialog-close]="true">
+    <mat-icon class="close-icon">close</mat-icon>
+</button>
 <div class="parent">
     <section class="container">
         <div class="email">
