--- a/src/app/components/doctor-profile/doctor-profile.component.html
+++ b/src/app/components/doctor-profile/doctor-profile.component.html
@@ -18,7 +18,7 @@
                     <mat-label>Choose a date</mat-label>
                     <input (dateChange)="onDateChange()" (click)="picker.open()" (keydown)="false"
                         formControlName="date" matInput [matDatepicker]="picker" [min]="todayDate">
-                    <mat-error *ngIf="date.invalid">
+                    <mat-error *ngIf="date.invalid && date.touched">
                         Please select a date
                     </mat-error>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
