--- a/src/app/components/edit-profile/edit-profile.component.css
+++ b/src/app/components/edit-profile/edit-profile.component.css
@@ -1,46 +1,59 @@
-  /* @author Rudra Makwana <rd851601@dal.ca> */
+/* @author Avinash Gazula <agazula@dal.ca> */
 
-span{
-    margin-left: 10px;
-  }
+.close-button {
+    float: right;
+    top: -24px;
+    right: -24px;
+}
 
-  .editprofile {
-    text-align: center;
-    width: 50%;
-  }
+mat-form-field {
+    width: 80%;
+}
 
-  h3 {
-    margin: 0 150px;
-  }
-
-  
-
-  mat-form-field {
-    width: 100%;
-  }
-
-  .first {
-    margin-top: 10px;
-  }
-
-  mat-divider {
+mat-divider {
     border-style: inset;
     border-width: 1px;
     height: 200px;
-  }
+}
 
-  mat-card-actions {
-      margin-bottom: 0 !important;
-  }
+button {
+    margin-left: 0 !important;
+}
 
-  button {
-      margin-left: 0 !important;
-  }
+.mat-raised-button {
+    background-color: #001f3f;
+    color: white;
+}
 
-  mat-toolbar {
+.mat-button {
+    color: #001f3f;
+}
+
+h3 {
+    margin: 0 150px;
+}
+
+.link {
+    text-align: left;
+}
+
+.first {
+    margin-top: 10px;
+}
+
+.parent {
+    height: 100%;
+}
+
+.container {
+    display: flex;
+    flex-basis: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.editprofile {
     text-align: center;
-  }
-
-  .span {
-    margin: auto;
-  }
+}
