--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,13 @@
 <!-- @author Avinash Gazula <agazula@dal.ca> -->
 
+<button mat-icon-button tabindex="-1" class="close-button" [routerLink]="['/']" [mat-dialog-close]="true">
+    <mat-icon class="close-icon">close</mat-icon>
+</button>
 <div class="parent">
     <section class="container">
         <div class="login">
             <h3>Login</h3>
+            <br>
             <mat-card-actions>
                 <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button>For
                     Consumers</button>
