--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,5 +1,11 @@
 /* @author Avinash Gazula <agazula@dal.ca> */
 
+.close-button {
+    float: right;
+    top: -24px;
+    right: -24px;
+}
+
 mat-form-field {
     width: 100%;
 }
@@ -14,17 +20,17 @@ button {
     margin-left: 0 !important;
 }
 
-mat-card-actions{
+mat-card-actions {
     padding: 0 !important;
 }
 
 .mat-raised-button {
-    background-color: #001F3F;
+    background-color: #001f3f;
     color: white;
 }
 
 .mat-button {
-    color: #001F3F;
+    color: #001f3f;
 }
 
 h1 {
