--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,8 @@
 <!--  @author Avinash Gazula <agazula@dal.ca>  -->
 
+<button mat-icon-button tabindex="-1" class="close-button" [routerLink]="['/']" [mat-dialog-close]="true">
+    <mat-icon class="close-icon">close</mat-icon>
+</button>
 <div class="parent">
     <div class="container">
         <div class="register">
@@ -34,7 +37,7 @@
                         <button mat-icon-button matSuffix (click)="hide = !hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
-                        <mat-hint align="end">Min Length 8. At least 1 Uppercase</mat-hint>
+                        <mat-hint align="end">Min Length 8. At least 1 Uppercase, Lowercase and Number</mat-hint>
                         <mat-error *ngIf="password.invalid">{{getPasswordError()}}
                         </mat-error>
                     </mat-form-field>
