Changes - Footer always sticks to the bottom now - Changes to the styles in the suggest doctor page to make it responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
-    <div style="overflow-x: hidden;">
+    <div class="main-container" style="overflow-x: hidden;">
         <app-header></app-header>
         <router-outlet></router-outlet>
-        <app-footer></app-footer>
+        <footer>
+            <app-footer class="footer"></app-footer>
+        </footer>
     </div>
 </body>
 
