--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
 
             </mat-menu>
 
-            <button mat-button routerLink="/" dis>
+            <button tabindex="-1" mat-button routerLink="/" dis>
                 <mat-icon class="logo">local_hospital</mat-icon>
                 <span class="logo">HEALTHHUB</span>
             </button>
