--- a/src/app/components/doctor-profile/doctor-profile.component.css
+++ b/src/app/components/doctor-profile/doctor-profile.component.css
@@ -10,18 +10,18 @@ body {
     object-fit: cover;
 }
 
-.details-container{
-    width: 40%;
+.details-container {
+    width: 60%;
 }
 
-.confirm{
+.confirm {
     background-color: #001f3f !important;
     color: white !important;
     width: fit-content;
 }
 
-.mat-raised-button{
-    background-color: #2E8B57;
+.mat-raised-button {
+    background-color: #2e8b57;
     color: white;
 }
 
@@ -29,7 +29,7 @@ mat-icon {
     color: #ffc700;
 }
 
-body{
+body {
     width: 100%;
     overflow-x: hidden;
     margin: 0 auto;
@@ -39,7 +39,7 @@ body{
     max-width: 250px;
 }
 
-.review-container{
+.review-container {
     width: 70%;
     margin: 0 auto;
 }
@@ -49,7 +49,7 @@ body{
     padding: 0 !important;
     background-color: white;
 }
-:host /deep/ .mat-card-header-text{
+:host /deep/ .mat-card-header-text {
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -62,27 +62,27 @@ mat-card-title {
     text-overflow: ellipsis !important;
 }
 
-.scroll-container{
+.scroll-container {
     overflow-x: auto;
 }
 
 * {
-  scrollbar-width: thin;
-  scrollbar-color: #001F3F #F5F5F5;
+    scrollbar-width: thin;
+    scrollbar-color: #001f3f #f5f5f5;
 }
 
 /* Works on Chrome/Edge/Safari */
 *::-webkit-scrollbar {
-  width: 12px;
+    width: 12px;
 }
 *::-webkit-scrollbar-track {
-  background: #F5F5F5;
-  border-radius: 20px;
+    background: #f5f5f5;
+    border-radius: 20px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #001F3F;
-  border-radius: 20px;
-  border: 3px solid #F5F5F5;
+    background-color: #001f3f;
+    border-radius: 20px;
+    border: 3px solid #f5f5f5;
 }
 
 mat-grid-list {
@@ -95,12 +95,17 @@ mat-card {
 }
 
 .mat-icon-button {
-    background-color: #001F3F;
+    background-color: #001f3f;
     color: white;
 }
 
+mat-form-field {
+    max-width: 500px !important;
+}
 
-h5,h4,h3 {
+h5,
+h4,
+h3 {
     margin: 0;
 }
 
@@ -109,47 +114,39 @@ mat-divider {
     margin: 0 auto;
 }
 
-#submit-button{
-
+#submit-button {
     background: #09335e;
-    border: 2px solid #001F3F;
+    border: 2px solid #001f3f;
     color: white;
     font-size: 14px;
     font-weight: 600;
-  
-    font-family:Helvetica;
+
+    font-family: Helvetica;
     height: fit-content;
-    transition: transform .2s;
-    
+    transition: transform 0.2s;
 }
 
-#reset-button{
+#reset-button {
     background: #09335e;
-    border: 2px solid #001F3F;
+    border: 2px solid #001f3f;
     color: white;
     font-size: 14px;
     font-weight: 600;
-  
-    font-family:Helvetica;
+
+    font-family: Helvetica;
     height: fit-content;
-    transition: transform .2s;
-
+    transition: transform 0.2s;
 }
 
-#doctor-col{
-padding: 30px;
+#doctor-col {
+    padding: 30px;
 }
 
-.card{
-background: linear-gradient(135deg,#09335e ,white);
+.card {
+    background: linear-gradient(135deg, #09335e, white);
 
+    height: fit-content;
 
-height: fit-content;
-
-border: 2px solid #09335e;
-vertical-align: middle;
-
-
-
-
+    border: 2px solid #09335e;
+    vertical-align: middle;
 }
