--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,8 +24,8 @@
                 <mat-form-field appearance="standard">
                     <mat-label>Enter your password</mat-label>
                     <input formControlName="password" matInput required [type]="hide ? 'password' : 'text'">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
+                    <button tabindex="-1" mat-icon-button matSuffix (click)="hide = !hide"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
                     <mat-error *ngIf="password.invalid">{{getPasswordError()}}</mat-error>
