--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <!-- /* @author Harshit Trivedi <harshit.trivedi@dal.ca> */ -->
 
 <div>
-    <h1>About Us</h1>
+    <h2>About Us</h2>
     <div>
         <p>
             HEALTHHUB allows users to book in-clinic appointments with doctors, purchase medicine, view blogs and
@@ -21,7 +21,7 @@
             opting for insurance, ordering medicine, blogs, home care and management between patients and doctors.
         </p>
         <p>
-            People aged 16 or above residing in Halifax Regional Municipality (HRM), having education above high school.
+            People aged 16 or above residing in Canada, having education above high school.
             Moreover, busy individuals who consider their time to be a valuable and limited resource. They are active
             physically and are positive in their outlooks. Behaviorally, they are often frugal and make smart purchase
             decisions, they will likely look first to the Internet to acquire information.
