--- a/src/app/components/suggestdoctor/suggestdoctor.component.html
+++ b/src/app/components/suggestdoctor/suggestdoctor.component.html
@@ -71,7 +71,7 @@
         <div class="row mycolumn" *ngFor="let doctor of doctorList">
             <ng-container *ngIf="count>0">
                 <mat-card class="example-card ">
-                    <div fxLayout="row" fxLayout.lt-sm="column" class="row mycolumn ">
+                    <div fxLayout="row" fxLayout.lt-md="column" class="row mycolumn ">
 
                         <div class="col-3 ">
                             <img mat-card-image src={{doctor.image}}
