--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -1,14 +1,14 @@
 /* @author Harshit Trivedi <harshit.trivedi@dal.ca> */
 
-h1 {
+h2 {
     text-align: center;
     margin: 10px 0px 13px 0px;
-    font: normal 400 36px/36px 'Roboto', sans-serif;
-    color: #335e85;
-  }
-  p{
+    font: normal 400 36px/36px "Roboto", sans-serif;
+    color: #001f3f;
+}
+p {
     padding: 10px;
-    letter-spacing: 0.000em;
-    font: normal 400 19px/26px 'Roboto', sans-serif;
+    letter-spacing: 0em;
+    font: normal 400 19px/26px "Roboto", sans-serif;
     color: #635f5d;
-  }
+}
