--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,9 +11,9 @@
                     <button href="#" mat-button [routerLink]="['/blogs']"><span class="menu-item">Blogs</span></button>
                     <button href="#" *ngIf="isDoctor" mat-button [routerLink]="['/view-doctor-appointments']"><span
                             class="menu-item">Appointments</span></button>
-                    <button href="#" *ngIf="!isDoctor" mat-button [routerLink]="['/orderMedicine']"><span
+                    <button href="#" *ngIf="isDoctor === false" mat-button [routerLink]="['/orderMedicine']"><span
                             class="menu-item">Medicines</span></button>
-                    <button href="#" *ngIf="!isDoctor" mat-button [routerLink]="['/consult']"><span
+                    <button href="#" *ngIf="isDoctor === false" mat-button [routerLink]="['/consult']"><span
                             class="menu-item">Consult</span></button>
                     <button href="#" mat-button [routerLink]="['/homeCare']"><span class="menu-item">Home
                             Care</span></button>
@@ -40,10 +40,10 @@
                             class="menu-item">Appointments</span></button>
                     <button href="#" *ngIf="!isDoctor" mat-button [routerLink]="['/orderMedicine']"><span
                             class="menu-item">Medicines</span></button>
-                    <button href="#" *ngIf="!isDoctor" mat-button [routerLink]="['/insurance']"><span
+                    <button href="#" mat-button [routerLink]="['/insurance']"><span
                             class="menu-item">Insurance</span></button>
                     <button href="#" mat-button [routerLink]="['/forum']"><span class="menu-item">Forum</span></button>
-                    <button href="#" mat-button [routerLink]="['/consult']"><span
+                    <button href="#" *ngIf="!isDoctor" mat-button [routerLink]="['/consult']"><span
                             class="menu-item">Consult</span></button>
                     <button href="#" mat-button [routerLink]="['/homeCare']"><span class="menu-item">Home
                             Care</span></button>
