--- a/src/app/components/view-doctor-appointments/view-doctor-appointments.component.html
+++ b/src/app/components/view-doctor-appointments/view-doctor-appointments.component.html
@@ -2,11 +2,11 @@
 <!-- Mat-Card element is adopted from Angular Material and made lot of changes by customizing with css.
   Form elemnts from Angular Material is also been used while designing form elemnts like buttons.
  -->
-<div class="container justify-content-center">
+<div class="container justify-content-center" style="padding-bottom: 500px;">
     <div class="row" style="padding: 10px;" *ngFor="let appointment of appointmentList">
         <mat-card class="example-card">
             <mat-card-header>
-                <mat-card-title>Patient Name: {{appointment.patientId}}</mat-card-title>
+                <mat-card-title>Patient Name: {{appointment.patientName}}</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <p>Appointment Date : {{appointment.date}}</p>
