--- a/src/app/components/blogshome/blogshome.component.html
+++ b/src/app/components/blogshome/blogshome.component.html
@@ -2,6 +2,18 @@
 <!-- Mat-Card element is adopted from Angular Material and made lot of changes by customizing with css.
   Form elemnts from Angular Material is also been used while designing form elemnts like buttons.
  -->
+
+<div style="margin-top: 50px; background-color:#001F3F;color: white;"class="container">
+  <div class="row justify-content-center">
+    <div style="text-align: center;" class="col">
+      You can also create your own blog
+  
+&nbsp;&nbsp;&nbsp;&nbsp;
+      <button [routerLink] = "['/writeblog']">Create Blog</button>
+    </div>
+  </div>
+</div>
+
 <div class="container">
   <div class="row" style="padding: 10px;">
     <mat-card class="example-card">
