--- a/src/app/components/medical-history/medical-history.component.html
+++ b/src/app/components/medical-history/medical-history.component.html
@@ -24,7 +24,7 @@
         </h2>
     </div>
     <div class="column" style="text-align: center;">
-        <form [formGroup]="medicalHistoryForm">
+        <form>
 
             <table>
                 <tr style="visibility: collapse;">
@@ -137,7 +137,7 @@
         </h2>
     </div>
     <div class="column" style="text-align: center;">
-        <form [formGroup]="medicalHistoryForm">
+        <form>
             <table>
                 <tr style="visibility: collapse;">
                     <td><mat-label>User ID: </mat-label></td>
