--- a/src/app/components/view-doctor-appointments/view-doctor-appointments.component.html
+++ b/src/app/components/view-doctor-appointments/view-doctor-appointments.component.html
@@ -3,6 +3,10 @@
   Form elemnts from Angular Material is also been used while designing form elemnts like buttons.
  -->
 <div class="container justify-content-center" style="padding-bottom: 500px;">
+
+    <ng-component *ngIf="count">
+        <p>There are no appointemnts scheduled for you</p>
+    </ng-component>
     <div class="row" style="padding: 10px;" *ngFor="let appointment of appointmentList">
         <mat-card class="example-card">
             <mat-card-header>
@@ -13,7 +17,8 @@
                 <p>Appointment time : {{appointment.time}}</p>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-stroked-button class="stroked" (click)="viewPatientDetails(appointment.patientId)">View Patient
+                <button mat-stroked-button class="stroked" (click)="viewPatientDetails(appointment.patientId)">View
+                    Patient
                     History</button>
                 <button mat-raised-button class="raised" (click)="acceptAppointment(appointment._id)">Accept
                     Appointment</button>
@@ -21,5 +26,8 @@
                     Appointment</button>
             </mat-card-actions>
         </mat-card>
+    </div>
+    <div *ngIf="count==0">
+        <h2>There are no appointemnts scheduled for you</h2>
     </div>
 </div>
